--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -870,7 +870,7 @@
             const subclip_id= liItem.dataset.subclip_id
             const main_id= liItem.dataset.main_id
             const editForm =document.getElementById('add-subclip-form')
-            editForm.action = `/text/edit_subclip/${video_clip_id}/`
+            editForm.action = `/text/edit_subclip/${subclip_id}/`
             document.getElementById('add-subclip-popup').style.display = 'flex';
 
  
