--- a/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/sceneselection/new_form.html
@@ -832,7 +832,7 @@
                 console.log('videoId: ',videoId )
                 document.getElementById(`selected_topic_${clipId}`).value = catId
                 await fetchVideoClips(document.getElementById(`selected_topic_${clipId}`),videoId);
-                document.getElementById(`videoSelect_${clipId}`).value =parseInt(videoId, 10) 
+                document.getElementById(`videoSelect_${clipId}`).value = videoId
             }else{
 
             }
