--- a/templates/vlc/frontend/VLSMaker/test_scene/index.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.min.css">
 
     <link rel="stylesheet" href="{% static 'sceneselection/style.css'%}">
-    <script src="{% static 'sceneselection/scene.css'%}"></script>
+    <link rel="stylesheet" href="{% static 'sceneselection/scene.css'%}">
     <script src="{% static 'sceneselection/script.js'%}"></script>
     
 </head>
