--- a/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/new_form.html
@@ -93,13 +93,27 @@
                 })
                 .catch(error => console.error('Error fetching clip IDs:', error));
         }
-    function openPopup(clipId, selectedText, remainingText) {
-            document.getElementById('add-subclip-popup').style.display = 'flex';
-            const formElement = document.getElementById('add-subclip-form')
-            formElement.action = `/text/add_subclip/${clipId}/`
-            const htmlContainer = document.getElementById('submit-cont');
+    // function openPopup(clipId, selectedText, remainingText) {
+    //         document.getElementById('add-subclip-popup').style.display = 'flex';
+    //         const getUrl = `/text/add_subcliphtmx/${clipId}/`
             
-        }
+    //     }
+    function openPopup(clipId, selectedText, remainingText) {
+        // document.getElementById('add-subclip-popup').style.display = 'flex';
+    const modalContainer = document.getElementById('modal-cont');
+    
+    if (modalContainer) {
+        const getUrl = `/text/add_subcliphtmx/${clipId}/`;
+        
+        htmx.ajax('GET', getUrl, { target: modalContainer });
+
+        // Display the modal
+        document.getElementById('add-subclip-popup').style.display = 'flex';
+    } else {
+        console.error("Modal container not found.");
+    }
+}
+
     
     async function fetchNoSubclipIds() {
         try {
