--- a/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
+++ b/templates/vlc/frontend/VLSMaker/test_scene/subclipform.html
@@ -6,7 +6,7 @@
 
     <div id="submit-cont">
         <div class="form-group">
-            <input id="slide_text"  name="slide_text" value="{{selected_text}}" readonly required class="form-input">
+            <input id="slide_text" hidden  name="slide_text" value="{{selected_text}}" readonly required class="form-input">
         </div>
         
         <input id="clipId" type="number" hidden name="clipId" value="${clipId}">
